[gd_scene load_steps=4 format=3 uid="uid://lef3cji6pgl2"]

[ext_resource type="Script" path="res://menu.gd" id="1_2qptg"]
[ext_resource type="Texture2D" uid="uid://b0tfpcoimuak6" path="res://assets/male_character.png" id="1_xvqum"]

[sub_resource type="Theme" id="Theme_ar47x"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_2qptg")

[node name="MenuPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ar47x")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_right = 192.0
offset_bottom = 151.0
grow_horizontal = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Address" type="LineEdit" parent="MenuPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
alignment = 1

[node name="Port" type="LineEdit" parent="MenuPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "9999"
alignment = 1

[node name="Host" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Host"
metadata/_edit_use_anchors_ = true

[node name="Join" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Join"
metadata/_edit_use_anchors_ = true

[node name="GenderPanel" type="Panel" parent="MenuPanel"]
custom_minimum_size = Vector2(100, 300)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -64.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterImage" type="Sprite2D" parent="MenuPanel/GenderPanel"]
texture_filter = 1
texture_repeat = 1
position = Vector2(183, 142)
scale = Vector2(6.28125, 5.579)
texture = ExtResource("1_xvqum")

[node name="Male" type="Button" parent="MenuPanel/GenderPanel"]
layout_mode = 2
offset_left = 389.0
offset_top = 108.0
offset_right = 453.0
offset_bottom = 139.0
toggle_mode = true
text = "Male"

[node name="Female" type="Button" parent="MenuPanel/GenderPanel"]
layout_mode = 2
offset_left = 389.0
offset_top = 143.0
offset_right = 453.0
offset_bottom = 174.0
text = "Female"

[connection signal="button_down" from="MenuPanel/GenderPanel/Male" to="." method="_on_male_button_down"]
[connection signal="button_down" from="MenuPanel/GenderPanel/Female" to="." method="_on_female_button_down"]
